# ai-LSW

./: .env.example  .gitignore  README.md  _last.py  _test_upload.py  config.yaml  config.yaml.example  database.py  pyproject.toml  python_path.txt  render.yaml  requirements.txt  start.bat  vercel.json  web_app.py  启动备课助手.ps1
api/: chat.py  health.py  history.py  login.py  register.py  user.py
app/: auth.py  chat_service.py  config.py  supabase_client.py
templates/: index.html  login.html  module_detail.html  module_math.html  module_physics.html  register.html
历史记录/public/: 幼儿园环保主题班会.pptx
历史记录/user_2/: 荷塘月色.pptx  荷塘月色_语文课件.pptx  课件_为初中数学《勾股定理》生成20道分层练习_20260708_104058.pptx  课件_生成一份《荷塘月色》的语文课件PPT，包_20260707_222620.pptx  课件_生成一份《荷塘月色》的语文课件PPT，包_20260708_011849.pptx  课件_生成一份《荷塘月色》的语文课件PPT，包_20260708_013625.pptx  课件_生成一份《荷塘月色》的语文课件PPT，包_20260708_014613.pptx  课件_生成一份《荷塘月色》的语文课件PPT，包_20260708_020311.pptx  课件_生成一份《荷塘月色》的语文课件PPT，包_20260708_020339.pptx  课件_生成一份《荷塘月色》的语文课件PPT，适_20260708_085453.pptx  课件_生成一份《荷塘月色》的语文课件PPT，适_20260708_085545.pptx  课件_生成一份《荷塘月色》的语文课件PPT，适_20260708_100712.pptx  课件_生成一份初中语文《背影》的完整45分钟教_20260707_223139.pptx
历史记录/user_7/: 课件_并发课件_20260708_020250.pptx  课件_数学课件_20260708_020246.pptx
