[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-lesson-planner"
version = "2.0.0"
description = "AI备课助手"
requires-python = ">=3.10"
dependencies = [
    "Flask==2.3.3",
    "python-dotenv==1.0.0",
    "supabase==2.0.1",
    "openai==1.13.3",
    "PyYAML==6.0.1",
    "python-docx==0.8.11",
    "python-pptx==0.6.23",
    "jwt==1.3.1",
    "requests==2.31.0"
]

[tool.vercel]
entrypoint = "web_app:app"